--- a/arbreBin/main.lpi
+++ b/arbreBin/main.lpi
@@ -26,11 +26,20 @@
       <FormatVersion Value="2"/>
       <Modes Count="0"/>
     </RunParams>
-    <Units Count="1">
+    <Units Count="3">
       <Unit0>
-        <Filename Value="main.pas"/>
+        <Filename Value="main.lpr"/>
         <IsPartOfProject Value="True"/>
       </Unit0>
+      <Unit1>
+        <Filename Value="arbrebin.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit1>
+      <Unit2>
+        <Filename Value="arbrebinplus.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="arbreBinPlus"/>
+      </Unit2>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
