fix marge sort bug

--- a/les algorithm de tri/Project1.lpi
+++ b/les algorithm de tri/Project1.lpi
@@ -30,6 +30,7 @@
       <Unit0>
         <Filename Value="Project1.pas"/>
         <IsPartOfProject Value="True"/>
+        <UnitName Value="main"/>
       </Unit0>
     </Units>
   </ProjectOptions>
